# hevy-brain

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  PROMPT.md  README.md  TASKS.md  config.example.toml  config.toml  pyproject.toml  requirements-test.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  test.yml
coordination/: ACTIVE.md
docs/: VERIFY-AND-CLOSEOUT-2026-06-14.md
docs/_archive/: OVERNIGHT-PLAN-2026-06-15.md
docs/handoffs/: 2026-06-12-2120-cv-overhaul.md  2026-06-12-2150-roadmap-brainstorm.md  2026-06-12-2215-north-star.md  2026-06-12-2240-task-gate.md  2026-06-12-2355-slice1-routines.md  2026-06-13-slice10-verify-exercise.md  2026-06-13-slice11-session-quality.md  2026-06-13-slice12-draft-adherence.md  2026-06-13-slice13-strength-ratio.md  2026-06-13-slice14-lapse-nudge.md  2026-06-13-slice15-queries-pack.md  2026-06-13-slice16-doctor.md  2026-06-13-slice17-hardening.md  2026-06-13-slice2-knowledge-bridge.md  2026-06-13-slice3-guide-return.md  2026-06-13-slice4-live-put-and-ask.md  2026-06-13-slice5-guide-redesign.md  2026-06-13-slice6-workout-fixup.md  2026-06-13-slice7-progress-charts.md  2026-06-13-slice8-coach-memory.md  2026-06-13-slice9-year-in-review.md  2026-06-14-afternoon-ruff-format.md  2026-06-14-morning-merge-a1a2.md  2026-06-14-overnight-audit.md  2026-06-15-overnight-autonomous.md  2026-06-16-morning-fix-s2.md  2026-06-16-morning-fix-warmup-cachelock.md  2026-06-16-warmup-e1rm-fix.md  2026-06-22-2008-fleet-finalisation.md  README.md
hevy_brain/: __init__.py  cli.py  clock.py  config.py  doctor.py  export.py  models.py  sync.py
hevy_brain/analytics/: __init__.py  comeback.py  deload.py  landmarks.py  patterns.py  progression.py  prs.py  reconcile.py  redesign.py  session_quality.py  sessiondiff.py  stats.py  strength_ratio.py
hevy_brain/api/: __init__.py  client.py
hevy_brain/coach/: __init__.py  adherence.py  advisor.py  ask.py  comeback.py  memory.py  redesign.py
hevy_brain/knowledge/: __init__.py  reader.py
hevy_brain/store/: __init__.py  cache.py
hevy_brain/vault/: __init__.py  build.py  charts.py  dashboards.py  drafts.py  exercises.py  heatmap.py  queries.py  routines.py  workouts.py  writer.py  yearreview.py
hevy_brain/writeback/: __init__.py  hevy_push.py
scripts/: register_task.ps1  run_hidden.vbs
tests/: conftest.py  test_adherence.py  test_analytics.py  test_api.py  test_ask.py  test_cache.py  test_cache_lock.py  test_charts.py  test_cli.py  test_clock.py  test_coach.py  test_coach_memory.py  test_comeback.py  test_config.py  test_deload.py  test_doctor.py  test_export.py  test_guide_redesign.py  test_guide_return.py  test_heatmap.py  test_knowledge.py  test_landmarks.py  test_models.py  test_progression.py  test_push.py  test_queries.py  test_session_quality.py  test_sessiondiff.py  test_strength_ratio.py  test_sync.py  test_vault_build.py  test_vault_routines.py  test_verify.py  test_writer.py  test_yearreview.py
