[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hevy-brain"
version = "0.1.0"
description = "Sync Hevy workout data into an Obsidian second brain, analyze training patterns, and push changes back to Hevy."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Samrath Singh", email = "samrathsingh302@gmail.com" }]
keywords = ["hevy", "obsidian", "fitness", "workout", "second-brain"]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "PyYAML>=6.0",
    "pydantic>=2.7",
    "anthropic>=0.40",
    # IANA tz database for zoneinfo (Europe/London civil-day clock). Windows
    # ships no system tzdata, so this is a hard runtime dep, not just dev.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "ruff==0.15.20",
    "mypy==2.3.0",
]

[project.urls]
Repository = "https://github.com/samrathsingh302/hevy-brain"
Issues = "https://github.com/samrathsingh302/hevy-brain/issues"

[project.scripts]
hevy-brain = "hevy_brain.cli:main"

[tool.setuptools.packages.find]
include = ["hevy_brain*"]

[tool.mypy]
python_version = "3.12"
files = ["hevy_brain"]
# Third-party deps (aiohttp/anthropic/yaml) ship partial or no stubs; we type
# our own code, not theirs. Kept green in CI — tighten incrementally.
ignore_missing_imports = true
